# fis-lead-gen

./: .env.example  .gitignore  DELIVERY_GUIDE.md  GCP_DEPLOYMENT_GUIDE.md  README.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  test.py
backend/: .dockerignore  Dockerfile  alembic.ini  pytest.ini  requirements-dev.txt  requirements.txt
brokercheck_extractor/: .env.example  ARCHITECTURE.md  README.md  cli.py  config.py  orchestrator.py  orchestrator_hybrid.py  pyproject.toml
brokercheck_extractor/acquisition/: finra_client.py  sec_edgar_client.py
brokercheck_extractor/derivation/: clearing_classifier.py  yoy_calculator.py
brokercheck_extractor/llm/: extractors.py  gemini_client.py  prompts.py
brokercheck_extractor/parsers/: base.py  finra_parser.py  focus_parser.py
brokercheck_extractor/schema/: models.py
brokercheck_extractor/storage/: db.py
brokercheck_extractor/tests/: test_hybrid.py  test_parsers.py
brokercheck_extractor/validation/: confidence.py  cross_validator.py
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
plans/: be-gemini-clearing-classifier-2026-04-29.md  be-kill-pdf-cache-tempdir-2026-04-28.md  be-scoring-redesign-2026-04-29.md  fe-alerts-empty-state-and-loading-2026-04-29.md  fe-alerts-tabs-2026-04-29.md  fe-dashboard-empty-state-polish-2026-04-29.md  fe-email-extractor-empty-state-polish-2026-04-30.md  fe-export-page-polish-2026-04-29.md  fe-favorite-list-picker-2026-04-29.md  (+8 more)
(+454 files in other folders)
