[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brokercheck-extractor"
version = "0.1.0"
description = "Batch pipeline: FINRA BrokerCheck + SEC X-17A-5 → Neon Postgres"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.4",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "google-genai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
brokercheck-extractor = "brokercheck_extractor.cli:main"

[tool.setuptools.packages.find]
include = ["brokercheck_extractor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
